--- a/BioMFA_Mobile/app/src/main/res/values/strings.xml
+++ b/BioMFA_Mobile/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="scan_rfid">Scan RFID</string>
     <string name="dark_mode">Dark mode</string>
     <string name="info">Info</string>
+    <string name="app_description">The BioMFA application is an integral component of my engineering thesis, conducted at the esteemed Warsaw University of Technology. Within the realm of Cybersecurity at the Faculty of Electronics and Information Technology, this project has been a remarkable endeavor.\n\nThe application forms an essential part of an innovative authentication solution, harnessing RFID implants for secure user verification. The potential impact of this cutting-edge approach on digital security is significant, and I am thrilled to have contributed to advancing the field through this academic pursuit.</string>
+    <string name="about_biomfa">About BioMFA</string>
+    <string name="biomfa_logo">BioMFA Logo</string>
+    <string name="implant_message">Position your implant near the phone\'s NFC antenna.</string>
+    <string name="nfc_icon">NFC Icon</string>
 </resources>
