Added typing in code, new main page design

--- a/BioMFA_Mobile/app/src/main/res/values/strings.xml
+++ b/BioMFA_Mobile/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="biomfa_logo">BioMFA Logo</string>
     <string name="implant_message">Position your implant near the phone\'s NFC antenna.</string>
     <string name="nfc_icon">NFC Icon</string>
+    <string name="line">_________________________</string>
 </resources>
